@@ -1,8 +1,10 @@
 package com.docpilot.backend.file.storage;
 
+import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -12,29 +14,64 @@ public class FileContentReader {
 
     private final MinioFileStorageWriter minioFileStorageWriter;
 
-    public FileContentReader(org.springframework.beans.factory.ObjectProvider<MinioFileStorageWriter> minioFileStorageWriterProvider) {
+    public FileContentReader(ObjectProvider<MinioFileStorageWriter> minioFileStorageWriterProvider) {
         this.minioFileStorageWriter = minioFileStorageWriterProvider.getIfAvailable();
     }
 
     public String readText(String storagePath) {
-        if (storagePath == null || storagePath.trim().isEmpty()) {
-            throw new IllegalStateException("storagePath 为空");
+        return new String(readBytes(storagePath, Long.MAX_VALUE), StandardCharsets.UTF_8);
+    }
+
+    public byte[] readBytes(String storagePath, long maxBytes) {
+        requireStoragePath(storagePath);
+        if (maxBytes <= 0) {
+            throw new IllegalArgumentException("maxBytes must be positive");
         }
         if (MinioFileStorageWriter.isMinioPath(storagePath)) {
-            if (minioFileStorageWriter == null) {
-                throw new IllegalStateException("检测到 MinIO 存储路径，但当前未启用 MinIO 模式: " + storagePath);
-            }
-            return minioFileStorageWriter.readText(storagePath);
+            requireMinioWriter(storagePath);
+            return minioFileStorageWriter.readBytes(storagePath, maxBytes);
         }
         try {
             Path path = Path.of(storagePath);
             if (!Files.exists(path)) {
-                throw new IllegalStateException("源文件不存在: " + storagePath);
+                throw new IllegalStateException("source file does not exist");
             }
-            return Files.readString(path, StandardCharsets.UTF_8);
+            long fileSize = Files.size(path);
+            if (fileSize > maxBytes) {
+                throw new IllegalStateException("source file exceeds parser size limit");
+            }
+            return Files.readAllBytes(path);
         } catch (IOException ex) {
-            throw new IllegalStateException("读取源文件失败: " + storagePath, ex);
+            throw new IllegalStateException("failed to read source file", ex);
+        }
+    }
+
+    public InputStream openStream(String storagePath) {
+        requireStoragePath(storagePath);
+        if (MinioFileStorageWriter.isMinioPath(storagePath)) {
+            requireMinioWriter(storagePath);
+            return minioFileStorageWriter.openStream(storagePath);
+        }
+        try {
+            Path path = Path.of(storagePath);
+            if (!Files.exists(path)) {
+                throw new IllegalStateException("source file does not exist");
+            }
+            return Files.newInputStream(path);
+        } catch (IOException ex) {
+            throw new IllegalStateException("failed to open source file", ex);
+        }
+    }
+
+    private void requireStoragePath(String storagePath) {
+        if (storagePath == null || storagePath.trim().isEmpty()) {
+            throw new IllegalStateException("storagePath must not be blank");
+        }
+    }
+
+    private void requireMinioWriter(String storagePath) {
+        if (minioFileStorageWriter == null) {
+            throw new IllegalStateException("MinIO storage path detected but MinIO storage is not enabled: " + storagePath);
         }
     }
 }
-
